# audio-player

./: .gitignore  index.html  package-lock.json  package.json
adr/: ADR-001-audio-pipeline-in-rust.md  ADR-002-wasm-plugin-system.md  ADR-003-dual-format-playlists.md  ADR-004-global-shortcut-architecture.md  ADR-005-mixing-engine-architecture.md  ADR-006-tauri-v2-standards.md
openspec/changes/fix-song-mixing/: design.md  tasks.md
openspec/changes/initial-player-architecture/: tasks.md
openspec/changes/move-plugins-to-popup/: design.md
openspec/changes/separate-mix-defaults/: proposal.md  tasks.md
openspec/specs/audio-pipeline/: spec.md
openspec/specs/debug-log/: spec.md
openspec/specs/log-filter/: spec.md
openspec/specs/log-toggle/: spec.md
openspec/specs/per-track-mix/: spec.md
openspec/specs/playback-position/: spec.md
openspec/specs/playlist-persist/: spec.md
openspec/specs/plugin-popup/: spec.md
openspec/specs/settings-persistence/: spec.md
openspec/specs/streaming-decode/: spec.md
plugins/: PLUGIN_SDK.md
plugins/example-gain/: plugin.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: app.toml  shortcuts.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: config.rs  decoder.rs  graph.rs  mixing.rs  mod.rs  output.rs  pipeline.rs  player.rs  playlist.rs  playlist_persist.rs  plugin_adapter.rs  plugin_host.rs  plugin_manager.rs  plugin_manifest.rs  ringbuf.rs  shortcuts.rs  volume.rs
src-tauri/wit/: audio-plugin.wit
(+69 files in other folders)
